--- a/src/App.css
+++ b/src/App.css
@@ -77,3 +77,41 @@
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-weight: bold;
 }
+
+.keyboard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+}
+
+.keyboard-row{
+  display: flex;
+  justify-content: center;
+  margin: 5px 0;
+}
+
+.key {
+  background-color: #f4f4f4;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px 15px;
+  margin: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.key:hover{
+  background-color: #ddd;
+}
+.key:active{
+  background-color: #ccc;
+}
+
+.enter {
+  flex: 2;
+}
+.backspace {
+  flex: 1.5;
+}
